--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="709393">  <td>18/07/24 11:19:41</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.InstallApp()[pri:0, instance:NewTest@52f759d7]">&lt;&lt;InstallApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291113768</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>18/07/24 11:18:07</td>   <td>-94137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Launching()[pri:0, instance:NewTest@52f759d7]">Launching</td> 
-  <td>main@1291113768</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>18/07/24 11:19:41</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.OpenedSession()[pri:0, instance:NewTest@52f759d7]">OpenedSession</td> 
-  <td>main@1291113768</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>18/07/24 11:18:07</td>   <td>-94154</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.UninstallApp()[pri:0, instance:NewTest@52f759d7]">&gt;&gt;UninstallApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291113768</td>   <td></td> </tr>
+<tr bgcolor="b79493">  <td>18/07/24 11:46:14</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.InstallApp()[pri:0, instance:NewTest@577bf0aa]">&lt;&lt;InstallApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1259950595</td>   <td></td> </tr>
+<tr bgcolor="b79493">  <td>18/07/24 11:44:36</td>   <td>-97497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Launching()[pri:0, instance:NewTest@577bf0aa]">Launching</td> 
+  <td>main@1259950595</td>   <td></td> </tr>
+<tr bgcolor="b79493">  <td>18/07/24 11:46:14</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.OpenedSession()[pri:0, instance:NewTest@577bf0aa]">OpenedSession</td> 
+  <td>main@1259950595</td>   <td></td> </tr>
+<tr bgcolor="b79493">  <td>18/07/24 11:44:36</td>   <td>-97556</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.UninstallApp()[pri:0, instance:NewTest@577bf0aa]">&gt;&gt;UninstallApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1259950595</td>   <td></td> </tr>
 </table>
