--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61bf71">  <td>18/07/24 13:16:18</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.InstallApp()[pri:0, instance:NewTest@4fba8eec]">&lt;&lt;InstallApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071522313</td>   <td></td> </tr>
-<tr bgcolor="61bf71">  <td>18/07/24 13:12:37</td>   <td>-220580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Launching()[pri:1, instance:NewTest@4fba8eec]">Launching</td> 
-  <td>main@1071522313</td>   <td></td> </tr>
-<tr bgcolor="61bf71">  <td>18/07/24 13:15:23</td>   <td>-54513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.OpenedSession()[pri:2, instance:NewTest@4fba8eec]">OpenedSession</td> 
-  <td>main@1071522313</td>   <td></td> </tr>
-<tr bgcolor="61bf71">  <td>18/07/24 13:12:37</td>   <td>-220603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.UninstallApp()[pri:0, instance:NewTest@4fba8eec]">UninstallApp</td> 
-  <td>main@1071522313</td>   <td></td> </tr>
+<tr bgcolor="a68bcb">  <td>18/07/24 14:26:54</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.InstallApp()[pri:0, instance:NewTest@73ca34e7]">&lt;&lt;InstallApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1971855969</td>   <td></td> </tr>
+<tr bgcolor="a68bcb">  <td>18/07/24 14:23:56</td>   <td>-178716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Test1()[pri:1, instance:NewTest@73ca34e7]">Test1</td> 
+  <td>main@1971855969</td>   <td></td> </tr>
+<tr bgcolor="a68bcb">  <td>18/07/24 14:26:24</td>   <td>-30007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Test2()[pri:2, instance:NewTest@73ca34e7]">Test2</td> 
+  <td>main@1971855969</td>   <td></td> </tr>
+<tr bgcolor="a68bcb">  <td>18/07/24 14:23:56</td>   <td>-178750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.UninstallApp()[pri:0, instance:NewTest@73ca34e7]">UninstallApp</td> 
+  <td>main@1971855969</td>   <td></td> </tr>
 </table>
