--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="887b98">  <td>18/07/25 14:32:01</td>   <td>0</td> <td title="&gt;&gt;Main.Capabilities()[pri:0, instance:NewTest@6d6bff89]">&gt;&gt;Capabilities</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@758201484</td>   <td></td> </tr>
-<tr bgcolor="6b8699">  <td>18/07/25 14:32:25</td>   <td>24345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Test1()[pri:1, instance:NewTest@6d6bff89]">Test1</td> 
-  <td>main@758201484</td>   <td></td> </tr>
-<tr bgcolor="6b8699">  <td>18/07/25 14:33:27</td>   <td>86253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Test2()[pri:2, instance:NewTest@6d6bff89]">Test2</td> 
-  <td>main@758201484</td>   <td></td> </tr>
-<tr bgcolor="887b98">  <td>18/07/25 14:34:03</td>   <td>121954</td> <td title="&lt;&lt;Main.tearDown()[pri:0, instance:NewTest@6d6bff89]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@758201484</td>   <td></td> </tr>
+<tr bgcolor="7080dc">  <td>18/07/27 09:46:15</td>   <td>0</td> <td title="&gt;&gt;Main.Capabilities()[pri:0, instance:NewTest@75881071]">&gt;&gt;Capabilities</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1561408618</td>   <td></td> </tr>
+<tr bgcolor="80ba84">  <td>18/07/27 09:46:28</td>   <td>12682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Test1()[pri:1, instance:NewTest@75881071]">Test1</td> 
+  <td>main@1561408618</td>   <td></td> </tr>
+<tr bgcolor="80ba84">  <td>18/07/27 09:47:29</td>   <td>74333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.Test2()[pri:2, instance:NewTest@75881071]">Test2</td> 
+  <td>main@1561408618</td>   <td></td> </tr>
+<tr bgcolor="7080dc">  <td>18/07/27 09:47:58</td>   <td>103045</td> <td title="&lt;&lt;Main.tearDown()[pri:0, instance:NewTest@75881071]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1561408618</td>   <td></td> </tr>
 </table>
